faqWrap bug resolved

--- a/components/Faq/Faq.module.css
+++ b/components/Faq/Faq.module.css
@@ -13,6 +13,9 @@
 }
 
 @media (max-width: 768px){
+    .faqWrap{
+        padding: 1rem;
+    }
     .faqTitle{
         width: 100%;
         padding: 1rem 0rem;
